Only output benchmarks on Clang 3.8
This commit goes with the associated changes on 'master' that push
benchmarks from all compilers to the gh-pages branch.

--- a/index.html
+++ b/index.html
@@ -96,21 +96,25 @@
 
     <div id="content" class="container-fluid">
       {% for benchmark in site.hetero %}
-        <div class="row">
-          <div class="col-sm-12">
-            <iframe class="chart thumbnail" section="hetero" src="{{ site.baseurl }}{{ benchmark.url }}" scrolling="no">
-            </iframe>
+        {% if benchmark.url contains "clang++-3.8" %}
+          <div class="row">
+            <div class="col-sm-12">
+              <iframe class="chart thumbnail" section="hetero" src="{{ site.baseurl }}{{ benchmark.url }}" scrolling="no">
+              </iframe>
+            </div>
           </div>
-        </div>
+        {% endif %}
       {% endfor %}
 
       {% for benchmark in site.type %}
-        <div class="row">
-          <div class="col-sm-12">
-            <iframe class="chart thumbnail" section="type" src="{{ site.baseurl }}{{ benchmark.url }}" scrolling="no">
-            </iframe>
+        {% if benchmark.url contains "clang++-3.8" %}
+          <div class="row">
+            <div class="col-sm-12">
+              <iframe class="chart thumbnail" section="type" src="{{ site.baseurl }}{{ benchmark.url }}" scrolling="no">
+              </iframe>
+            </div>
           </div>
-        </div>
+        {% endif %}
       {% endfor %}
     </div>
 
