Allow selecting which compiler is being used
ldionne/metabench#67

--- a/_hetero/g++-4.9/at/index.html
+++ b/_hetero/g++-4.9/at/index.html
@@ -1,4 +1,5 @@
 ---
+compiler: g++-4.9
 ---
 <!DOCTYPE html>                                                             
 <html>                                                                      
