--- a/_hetero/clang++-3.6/make/index.html
+++ b/_hetero/clang++-3.6/make/index.html
@@ -1,4 +1,5 @@
 ---
+compiler: clang++-3.6
 ---
 <!DOCTYPE html>                                                             
 <html>                                                                      
