--- a/_hetero/clang++-3.7/at/index.html
+++ b/_hetero/clang++-3.7/at/index.html
@@ -1,4 +1,5 @@
 ---
+compiler: clang++-3.7
 ---
 <!DOCTYPE html>                                                             
 <html>                                                                      
