--- a/_hetero/g++-4.8/transform/index.html
+++ b/_hetero/g++-4.8/transform/index.html
@@ -1,4 +1,5 @@
 ---
+compiler: g++-4.8
 ---
 <!DOCTYPE html>                                                             
 <html>                                                                      
