--- a/_type/clang++-3.6/at/index.html
+++ b/_type/clang++-3.6/at/index.html
@@ -1,4 +1,5 @@
 ---
+compiler: clang++-3.6
 ---
 <!DOCTYPE html>                                                             
 <html>                                                                      
