--- a/_type/clang++-3.7/transform/index.html
+++ b/_type/clang++-3.7/transform/index.html
@@ -1,4 +1,5 @@
 ---
+compiler: clang++-3.7
 ---
 <!DOCTYPE html>                                                             
 <html>                                                                      
