--- a/_hetero/clang++-3.7/transform/index.html
+++ b/_hetero/clang++-3.7/transform/index.html
@@ -1,5 +1,6 @@
 ---
 compiler: clang++-3.7
+timestamp: Wed, 30 Mar 2016
 ---
 <!DOCTYPE html>                                                             
 <html>                                                                      
