--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ compilers:
       }
 
       .panel-group .panel-footer {
-        background-color: initial;
+        background-color: white;
         padding: 0px 10px 4px;
         font-size: 0.8em;
         text-align: right;
