--- a/index.html
+++ b/index.html
@@ -80,8 +80,15 @@ compilers:
       #content {
         height: auto;
         min-height: 100%;
+        padding-top: 60px;
         padding-bottom: 100px;
         margin-bottom: -100px;
+      }
+
+      @media (max-width: 768px) {
+        #content {
+          padding-top: 200px;
+        }
       }
 
       #footer {
@@ -117,7 +124,7 @@ compilers:
   </head>
   <body>
     <div id="content">
-      <nav class="navbar navbar-default" role="navigation">
+      <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
             <a class="navbar-brand" href="#">Metabench</a>
