--- a/index.html
+++ b/index.html
@@ -163,14 +163,12 @@ compilers:
             <div class="panel-group">
               {% for benchmark in site.documents %}
               <div class="chart panel panel-default" collection="{{ benchmark.collection }}" compiler="{{ benchmark.compiler }}" style="display: none">
-                <div class="panel-heading">
-                  <span class="panel-title">
-                    <a data-toggle="collapse" href="#chart{{ forloop.index }}">{{ benchmark.url | split: "/" | shift: 3 | pop | join: "/" }}</a>
-                  </span>
+                <div class="panel-heading" data-toggle="collapse" href="#chart{{ forloop.index }}" role="button">
+                  <span class="panel-title" >{{ benchmark.url | split: "/" | shift: 3 | pop | join: "/" }}</span>
                 </div>
                 <div id="chart{{ forloop.index }}" class="panel-collapse collapse" style="height: 0px">
                   <iframe class="panel-body" source="{{ site.baseurl }}{{ benchmark.url }}" scrolling="no"></iframe>
-                 <div class="panel-footer text-muted">Last updated on {{ benchmark.timestamp }}</div>
+                  <div class="panel-footer text-muted">Last updated on {{ benchmark.timestamp }}</div>
                 </div>
               </div>
               {% endfor %}
