--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@ compilers:
         visibility: visible;
       }
 
+      .modal-header {
+        padding: 10px 15px;
+      }
+
+      .progress {
+        margin: 0;
+      }
+
       #content {
         height: auto;
         min-height: 100%;
@@ -185,11 +193,11 @@ compilers:
       </div>
     </div>
 
-    <div id="dialog" class="modal fade" data-backdrop="static" data-keyboard="false">
+    <div id="dialog" class="modal fade" data-backdrop="static" data-keyboard="false" role="dialog">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h1>Loading charts...</h1>
+            <h3 class="modal-title">Loading charts...</h3>
           </div>
           <div class="modal-body">
             <div class="progress">
