--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@ compilers:
               {% if collection.label == 'posts' %}
                 {% continue %}
               {% endif %}
-            <li class="collection{% if collection.active %} active{% endif %}" collection="{{ collection.label }}"><a href="#">{{ collection.name }}</a></li>
+            <li class="collection{% if collection.active %} active{% endif %}" data-collection="{{ collection.label }}"><a href="#">{{ collection.name }}</a></li>
             {% endfor %}
             <li class="compilers active dropdown">
               <a class="active dropdown-toggle" data-toggle="dropdown" href="#"><span class="name"></span><span class="caret"></span></a>
               <ul class="dropdown-menu">
                 {% for compiler in page.compilers %}
-                <li class="compiler{% if compiler.active %} active{% endif %}" compiler="{{ compiler.label }}"><a href="#">{{ compiler.name }}</a></li>
+                <li class="compiler{% if compiler.active %} active{% endif %}" data-compiler="{{ compiler.label }}"><a href="#">{{ compiler.name }}</a></li>
                 {% endfor %}
               </ul>
             </li>
@@ -177,12 +177,12 @@ compilers:
           <div class="col-sm-12">
             <div class="panel-group">
               {% for benchmark in site.documents %}
-              <div class="chart panel panel-default" collection="{{ benchmark.collection }}" compiler="{{ benchmark.compiler }}" style="display: none">
-                <div class="panel-heading" data-toggle="collapse" href="#chart{{ forloop.index }}" role="button">
+              <div class="chart panel panel-default" data-collection="{{ benchmark.collection }}" data-compiler="{{ benchmark.compiler }}" style="display: none">
+                <div class="panel-heading" data-toggle="collapse" data-target="#chart{{ forloop.index }}" role="button">
                   <span class="panel-title" >{{ benchmark.url | split: "/" | shift: 3 | pop | join: "/" }}</span>
                 </div>
                 <div id="chart{{ forloop.index }}" class="panel-collapse collapse" style="height: 0px">
-                  <iframe class="panel-body" source="{{ site.baseurl }}{{ benchmark.url }}" scrolling="no"></iframe>
+                  <iframe class="panel-body" data-src="{{ site.baseurl }}{{ benchmark.url }}"></iframe>
                   <div class="panel-footer text-muted">Last updated on {{ benchmark.timestamp }}</div>
                 </div>
               </div>
@@ -201,7 +201,7 @@ compilers:
           </div>
           <div class="modal-body">
             <div class="progress">
-              <div class="progress-bar progress-bar-striped active" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
+              <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
             </div>
           </div>
         </div>
@@ -214,10 +214,10 @@ compilers:
           <div class="col-md-12">
             <ul class="list-inline">
               <li class="social-btn">
-                <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=ldionne&amp;repo=metabench&amp;type=watch&amp;count=true" title="Star on GitHub" scrolling="no"></iframe>
+                <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=ldionne&amp;repo=metabench&amp;type=watch&amp;count=true" title="Star on GitHub"></iframe>
               </li>
               <li class="social-btn">
-                <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=ldionne&amp;repo=metabench&amp;type=fork&amp;count=true" title="Fork on GitHub" scrolling="no"></iframe>
+                <iframe class="github-btn" src="https://ghbtns.com/github-btn.html?user=ldionne&amp;repo=metabench&amp;type=fork&amp;count=true" title="Fork on GitHub"></iframe>
               </li>
             </ul>
             &copy; Copyright 2016
@@ -236,7 +236,7 @@ compilers:
     <script src="{{ site.baseurl }}/bootstrap.min.js"></script>
     <script>
       function load(charts){
-        var iframes = $(charts).find("iframe:not([src])[source]");
+        var iframes = $(charts).find("iframe:not([src])[data-src]");
 
         if(iframes.length <= 0)
           return;
@@ -265,24 +265,24 @@ compilers:
           });
 
         iframes.each(function(idx, iframe){
-          $(iframe).attr("src", $(iframe).attr("source")).removeAttr("source");
+          $(iframe).attr("src", $(iframe).attr("data-src")).removeAttr("data-src");
         });
       }
 
       $(function(){
         $(".index > .collection").on("click", function(){
-          var compiler = $(".index > .compilers .compiler.active").attr("compiler");
+          var compiler = $(".index > .compilers .compiler.active").attr("data-compiler");
           $(this).addClass("active").siblings(".collection").removeClass("active");
-          $(".chart:not([collection='" + $(this).attr("collection") + "'])").hide();
-          $(".chart[collection='" + $(this).attr("collection") + "'][compiler='" + compiler + "']").fadeIn();
+          $(".chart:not([data-collection='" + $(this).attr("data-collection") + "'])").hide();
+          $(".chart[data-collection='" + $(this).attr("data-collection") + "'][data-compiler='" + compiler + "']").fadeIn();
           load(".chart:visible");
         });
 
         $(".index > .compilers .compiler").on("click", function(){
-          var collection = $(".index > .collection.active").attr("collection");
+          var collection = $(".index > .collection.active").attr("data-collection");
           $(this).addClass("active").siblings(".compiler").removeClass("active");
-          $(".chart:not([compiler='" + $(this).attr("compiler") + "'])").hide();
-          $(".chart[compiler='" + $(this).attr("compiler") + "'][collection='" + collection + "']").fadeIn();
+          $(".chart:not([data-compiler='" + $(this).attr("data-compiler") + "'])").hide();
+          $(".chart[data-compiler='" + $(this).attr("data-compiler") + "'][data-collection='" + collection + "']").fadeIn();
           load(".chart:visible");
         });
 
