Put external dependencies in the public/ directory
Trying to organize things a bit

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@ compilers:
 
     <title>Metabench</title>
 
-    <link href="{{ site.baseurl }}/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ site.baseurl }}/octicons.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/public/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ site.baseurl }}/public/octicons/octicons.css" rel="stylesheet">
     <style>
       /*!
        * IE10 viewport hack for Surface/desktop Windows 8 bug
@@ -204,8 +204,8 @@ compilers:
       </div>
     </div>
 
-    <script src="{{ site.baseurl }}/jquery-1.11.3.min.js"></script>
-    <script src="{{ site.baseurl }}/bootstrap.min.js"></script>
+    <script src="{{ site.baseurl }}/public/js/jquery-1.11.3.min.js"></script>
+    <script src="{{ site.baseurl }}/public/js/bootstrap.min.js"></script>
     <script>
       function load(charts){
         var iframes = $(charts).find("iframe:not([src])[data-src]");
