--- a/index.html
+++ b/index.html
@@ -163,16 +163,19 @@ compilers:
           <div class="col-sm-12">
             <div class="panel-group">
               {% for benchmark in site.documents %}
-              <div class="chart panel panel-default" data-collection="{{ benchmark.collection }}" data-compiler="{{ benchmark.compiler }}" style="display: none">
-                <div class="panel-heading" data-toggle="collapse" data-target="#chart{{ forloop.index }}" role="button">
-                  <span class="panel-title" >{{ benchmark.url | split: "/" | shift: 3 | pop | join: "/" }}</span>
-                  <span class="link pull-right"><a class="octicon octicon-link-external" href="{{ site.baseurl }}{{ benchmark.url }}"></a></span>
+                {% comment %} Skip the JSON files {% endcomment %}
+                {% if benchmark.url contains "index.html" %}
+                <div class="chart panel panel-default" data-collection="{{ benchmark.collection }}" data-compiler="{{ benchmark.compiler }}" style="display: none">
+                  <div class="panel-heading" data-toggle="collapse" data-target="#chart{{ forloop.index }}" role="button">
+                    <span class="panel-title" >{{ benchmark.url | split: "/" | shift: 3 | pop | join: "/" }}</span>
+                    <span class="link pull-right"><a class="octicon octicon-link-external" href="{{ site.baseurl }}{{ benchmark.url }}"></a></span>
+                  </div>
+                  <div id="chart{{ forloop.index }}" class="panel-collapse collapse">
+                    <iframe class="panel-body" data-src="{{ site.baseurl }}{{ benchmark.url }}"></iframe>
+                    <div class="panel-footer text-muted">Last updated on {{ benchmark.timestamp }}</div>
+                  </div>
                 </div>
-                <div id="chart{{ forloop.index }}" class="panel-collapse collapse">
-                  <iframe class="panel-body" data-src="{{ site.baseurl }}{{ benchmark.url }}"></iframe>
-                  <div class="panel-footer text-muted">Last updated on {{ benchmark.timestamp }}</div>
-                </div>
-              </div>
+                {% endif %}
               {% endfor %}
             </div>
           </div>
