Add Clang 3.9 to the compilers

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@ compilers:
     label: clang++-3.7
   - name: Clang 3.8
     label: clang++-3.8
+  - name: Clang 3.9
+    label: clang++-3.9
     active: true
   - name: GCC 4.8
     label: g++-4.8
