Enable Clang 4.0 and GCC 7 on the website

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@ compilers:
     label: clang++-3.8
   - name: Clang 3.9
     label: clang++-3.9
+  - name: Clang 4.0
+    label: clang++-4.0
     active: true
   - name: GCC 4.8
     label: g++-4.8
@@ -17,6 +19,8 @@ compilers:
     label: g++-5
   - name: GCC 6
     label: g++-6
+  - name: GCC 7
+    label: g++-7
 ---
 
 <!DOCTYPE html>
